--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,12 +1,14 @@
 // COLORS
-$primary-color: #02aab0;
-$secondary-color: #00cdac;
+$primary-color: #7f02b0;
+$secondary-color: #5900cd;
 
 $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #272341; // For Headings
+$dark-blue-text: #7a8a9b ;
+
+$dark-background: #3e3c49;
 
 // FONT SIZE
 $default-font-size: 1.6rem;
