--- a/src/style/sections/_projects.scss
+++ b/src/style/sections/_projects.scss
@@ -1,8 +1,9 @@
 #projects {
-  background-color: $white-color;
+  background-color: $dark-background;
   color: $dark-blue-text;
   margin-top: -10rem;
   padding-top: 15rem;
+  
 
   @include respond(tab-land) {
     margin-top: 0;
@@ -25,6 +26,7 @@
     }
 
     &__text {
+      border-radius: 50%;
       text-align: left;
 
       @include respond(phone) {
@@ -38,14 +40,15 @@
         font-weight: bold;
         margin-bottom: 1.8rem;
         font-size: $mid-font-size;
+        color: $dark-blue-text;
 
         @include respond(phone) {
           font-size: 2rem;
         }
       }
 
-      & p > a {
-        color: $secondary-color;
+      & p {
+        color: $white-color;
       }
     }
 
