--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,12 +1,12 @@
 // COLORS
-$primary-color: #7f02b0;
-$secondary-color: #5900cd;
+$primary-color: #f6e1ff;
+$secondary-color: #eee0ff;
 
 $white-color: #fff;
 
 $dark-grey: #333333;
 
-$dark-blue-text: #7a8a9b ;
+$dark-blue-text: #7a8a9b;
 
 $dark-background: #3e3c49;
 
