enhance buttons feedback

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #f6e1ff;
-$secondary-color: #eee0ff;
+$primary-color: #e29afe;
+$secondary-color: #cba3ff;
 
 $white-color: #fff;
 
