enhance buttons feedback

--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #e29afe;
-$secondary-color: #cba3ff;
+$primary-color: #592dd1;
+$secondary-color: #010314;
 
 $white-color: #fff;
 
