--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #592dd1;
-$secondary-color: #010314;
+$primary-color: #a02dd1;
+$secondary-color: #250657;
 
 $white-color: #fff;
 
