--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #a02dd1;
-$secondary-color: #4b11a9;
+$primary-color: #cc52ff;
+$secondary-color: #7520ff;
 
 $white-color: #fff;
 
