--- a/src/style/abstracts/_variables.scss
+++ b/src/style/abstracts/_variables.scss
@@ -1,6 +1,6 @@
 // COLORS
-$primary-color: #cc52ff;
-$secondary-color: #7520ff;
+$primary-color: #ef68ff;
+$secondary-color: #8a42ff;
 
 $white-color: #fff;
 
